# src/main/doc/openapi-analytics-v1.yaml
@@ -155,6 +155,9 @@ components:
             The errors list of the analytics.
       required:
         - installationUuid
+        - infos
+        - events
+        - errors
 
     Information:
       type: object
@@ -173,9 +176,11 @@ components:
         timestamp:
           type: string
           format: date-time
+          nullable: false
           description: The BasicInfo timestamp. Date-time notation as defined by RFC 3339, section 5.6, for example, 2017-07-21T17:32:28Z
         desc:
           type: string
+          nullable: false
           description: the basic info description
       required:
         - name
